--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "umd:main": "dist/index.umd.js",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "rollup -c",
-    "watch": "rollup -c --watch",
+    "build": "node ./purge-tailwindcss.js && rollup -c",
+    "watch": "npm run tailwind && rollup -c --watch",
     "dev": "concurrently \" npm run watch \" \" npm run start --prefix examples/react-material-ui-datatable \"  ",
+    "tailwind": "./node_modules/.bin/tailwind build ./src/styles/tailwind.base.css -c ./tailwind.js -o ./src/styles/tailwind.css",
     "test": "run-s test:unit test:lint test:build",
     "test:lint": "eslint src/**/*.js",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
@@ -80,7 +81,8 @@
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-uglify": "^6.0.4",
-    "styled-components": "^5.1.1"
+    "purgecss": "1.4.2",
+    "tailwindcss": "^1.4.6"
   },
   "peerDependencies": {
     "react": "^16.13.1",
@@ -98,5 +100,11 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/bitanxen/react-datatable"
+  },
+  "dependencies": {
+    "@material-ui/pickers": "^3.2.10",
+    "react-draggable": "^4.4.3",
+    "rollup-plugin-import-css": "^1.1.2",
+    "uuid": "^8.3.2"
   }
 }
